--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
     background-color: #fff;
     padding: 1rem;
     margin-top: 1rem;
-    color  : #eee;
+    color  : #696969;
 }
 
 .draggable {
@@ -18,7 +18,7 @@
     opacity: .5;
 }
 .box-to-contain {
-  
+
 
 }
 h1 {
@@ -71,6 +71,8 @@ p {
     top: 20px;
     right: 45px;
     font-size: 60px;
+    background-color: transparent;
+    border: none;
 }
 
 @media screen and (max-height: 450px) {
